--- a/mestre-fuga.html
+++ b/mestre-fuga.html
@@ -256,7 +256,7 @@ En 2024 tengo el placer de formar al primer Mestre en el extranjero: Mestre Xod√
                   <h4>Docente</h4>
                   <p>Mestre Xodo</p>
                   <a href="assets/img/Sede Central Mestre Fuga/Estudiantes/Mestre Xodo.jpg" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="mestre-xodo.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="mestre-xodo.html" title="M√°s info." class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -368,7 +368,7 @@ En 2024 tengo el placer de formar al primer Mestre en el extranjero: Mestre Xod√
                   <h4>Estudiante y docente</h4>
                   <p>Profesor Puma</p>
                   <a href="assets/img/Sede Central Mestre Fuga/Estudiantes/Puma.jpg" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="puma.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="puma.html" title="M√°s info." class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -380,7 +380,7 @@ En 2024 tengo el placer de formar al primer Mestre en el extranjero: Mestre Xod√
                   <h4>Estudiante y docente</h4>
                   <p>Profesor Splinter</p>
                   <a href="assets/img/Sede Central Mestre Fuga/Estudiantes/Splinter.jpeg" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="splinter.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="splinter.html" title="M√°s info." class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -392,6 +392,7 @@ En 2024 tengo el placer de formar al primer Mestre en el extranjero: Mestre Xod√
                   <h4>Estudiante y docente</h4>
                   <p>Profesor Quati</p>
                   <a href="assets/img/Sede Central Mestre Fuga/Estudiantes/Quati.jpg" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="quati.html" title="M√°s info." class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -403,7 +404,7 @@ En 2024 tengo el placer de formar al primer Mestre en el extranjero: Mestre Xod√
                   <h4>Estudiante y docente</h4>
                   <p>Estagiario JC</p>
                   <a href="assets/img/Sede Central Mestre Fuga/Estudiantes/JC.jpg" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="jc.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="jc.html" title="M√°s info." class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
