--- a/robin.html
+++ b/robin.html
@@ -233,7 +233,7 @@
                 <div class="portfolio-info">
                   <h4>Docente a cargo</h4>
                   <p>Instructor Robin, sede CMD Lo Prado</p>
-                  <a href="assets/img/Sede Lo Prado Instructor Robin/Robin.jpeg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/Sede Lo Prado Instructor Robin/Robin.jpeg" title="Ampliar" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -244,7 +244,7 @@
                 <div class="portfolio-info">
                   <h4>Estudiantes</h4>
                   <p>Agustín Grado Batizado</p>
-                  <a href="assets/img/Sede Lo Prado Instructor Robin/Agustín.jpeg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/Sede Lo Prado Instructor Robin/Agustín.jpeg" title="Ampliar" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -255,7 +255,7 @@
                   <div class="portfolio-info">
                     <h4>Estudiantes</h4>
                     <p>Arale Grado infantil, avanzado</p>
-                    <a href="assets/img/Sede Lo Prado Instructor Robin/Arale.jpeg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                    <a href="assets/img/Sede Lo Prado Instructor Robin/Arale.jpeg" title="Ampliar" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -266,7 +266,7 @@
                   <div class="portfolio-info">
                     <h4>Estudiantes</h4>
                     <p>Moleque</p>
-                    <a href="assets/img/Sede Lo Prado Instructor Robin/Moleque 1.jpeg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                    <a href="assets/img/Sede Lo Prado Instructor Robin/Moleque 1.jpeg" title="Ampliar" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   </div>
                 </div>
               </div><!-- End Portfolio Item -->
@@ -277,7 +277,7 @@
                     <div class="portfolio-info">
                       <h4>Estudiantes</h4>
                       <p>Moleque</p>
-                      <a href="assets/img/Sede Lo Prado Instructor Robin/Moleque 2.jpeg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                      <a href="assets/img/Sede Lo Prado Instructor Robin/Moleque 2.jpeg" title="Ampliar" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                     </div>
                   </div>
                 </div><!-- End Portfolio Item -->
@@ -288,7 +288,7 @@
                       <div class="portfolio-info">
                         <h4>Estudiantes</h4>
                         <p>Moleque</p>
-                        <a href="assets/img/Sede Lo Prado Instructor Robin/Moleque 3.jpeg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                        <a href="assets/img/Sede Lo Prado Instructor Robin/Moleque 3.jpeg" title="Ampliar" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                       </div>
                     </div>
                   </div><!-- End Portfolio Item -->
@@ -299,7 +299,7 @@
                         <div class="portfolio-info">
                           <h4>Estudiantes</h4>
                           <p>Moleque</p>
-                          <a href="assets/img/Sede Lo Prado Instructor Robin/Moleque 4.jpeg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                          <a href="assets/img/Sede Lo Prado Instructor Robin/Moleque 4.jpeg" title="Ampliar" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                         </div>
                       </div>
                     </div><!-- End Portfolio Item -->
@@ -310,7 +310,7 @@
                           <div class="portfolio-info">
                             <h4>Estudiantes</h4>
                             <p>Moleque</p>
-                            <a href="assets/img/Sede Lo Prado Instructor Robin/Moleque 5.jpeg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                            <a href="assets/img/Sede Lo Prado Instructor Robin/Moleque 5.jpeg" title="Ampliar" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                           </div>
                         </div>
                       </div><!-- End Portfolio Item -->
@@ -321,7 +321,7 @@
                             <div class="portfolio-info">
                               <h4>Estudiantes</h4>
                               <p>Nicole, Grado Batizado </p>
-                              <a href="assets/img/Sede Lo Prado Instructor Robin/Nicole.jpeg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                              <a href="assets/img/Sede Lo Prado Instructor Robin/Nicole.jpeg" title="Ampliar" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                             </div>
                           </div>
                         </div><!-- End Portfolio Item -->
