--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
 
             <div class="swiper-slide">
               <div class="evento-item">
-                <img src="assets/img/Eventos/Mirim Axé.jpeg" class="evento-img" alt="">
+                <img src="assets/img/Eventos/Mirim_axé.jpeg" class="evento-img" alt="">
                 <p>
                   <i class="quote-icon-left"></i>
                   <span>Festival Mirim Axé. Los niños viven una experiencia única destinada principalmente para ellos</span>
