--- a/robin.html
+++ b/robin.html
@@ -129,7 +129,7 @@
             <img src="assets/img/Docentes CMD/Robin.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>CMD Maipú</h2>
+            <h2>CMD Lo Prado</h2>
             <p class="fst-italic py-3">
               En CMD, nos preocupamos por lograr entregar una educación continua y de excelencia a nuestros estudiantes:
             </p>
