--- a/robin.html
+++ b/robin.html
@@ -355,7 +355,7 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Dirección</h3>
-                  <p>Rio Rhin #150, Maipú, RM, Chile</p>
+                  <p>Los clarines #6620, Lo Prado, RM, Chile</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -363,7 +363,7 @@
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>WhatsApp</h3>
-                  <p>+56 959235055</p>
+                  <p>+56 933066058</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -371,7 +371,7 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Correo</h3>
-                  <p>profesorpuma@cmd.cl</p>
+                  <p>rojasastudillo0@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
 
