--- a/jc.html
+++ b/jc.html
@@ -52,7 +52,7 @@
     </a>
 
     <div class="social-links text-center">
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+      <a href="https://www.instagram.com/capoeira_est.central?igsh=NWFvbWEza2YzdzVp" class="instagram"><i class="bi bi-instagram"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
