cambio de whatsapp funcional

--- a/jc.html
+++ b/jc.html
@@ -122,11 +122,11 @@
 
             <p>Mi nombre es Juan Carlos Araya González conocido en Capoeira como “JC” comencé mi entrenamiento personal en el año 2002, 
               actualmente estoy a cargo de las clases en la academia CMD de Estación Central, soy una persona apasionada por esta arte, 
-              poseo una gran vocación compartir mis conocimientos con mis alumnos y verlos mejorar día a día, tengo una amplia experiencia 
+              poseo gran vocación de compartir mis conocimientos con mis alumnos y verlos mejorar día a día, tengo una amplia experiencia 
               trabajando personas de diferentes edades, mi objetivo es fomentar un ambiente grato y seguro donde puedan aprender y desarrollar 
               sus habilidades deportivas, estoy convencido de que Capoeira puede contribuir positivamente en el desarrollo integral de las 
               personas ya que promueve hábitos saludables, trabajo en equipo, mejora la condición física, aumenta la flexibilidad, mejora el 
-              equilibrio, desarrolla la condición motora, estimula la autoconfianza, disminuye la timidez, estimula la expresión corporal ya 
+              equilibrio, desarrolla la condición motora, estimula la autoconfianza, disminuye la timidez y estimula la expresión corporal ya 
               que es un arte que contempla lucha, danza, acrobacia idioma y mucho más…
               La Capoeira me ha brindado innumerables beneficios y estoy profundamente agradecido por ello, me ha ayudado a mantenerme sano, 
               fuerte, y con una mente activa, me permite conectar con otras personas, formar valiosas amistades, me brinda una sensación de 
@@ -336,27 +336,33 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Dirección</h3>
-                  <p>Rio Rhin #150, Maipú, RM, Chile</p>
+                  <p>Las Estepas 845, Estación Central, RM, Chile</p>
                 </div>
               </div><!-- End Info Item -->
 
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
-                <i class="bi bi-telephone flex-shrink-0"></i>
+                  <i class="bi bi-whatsapp flex-shrink-0"></i>
                 <div>
                   <h3>WhatsApp</h3>
-                  <p>+56 959235055</p>
+                  <p>
+                  <a href="https://wa.me/56961711943" 
+                    class="whatsapp-link" 
+                    target="_blank" 
+                    rel="noopener noreferrer">  <!-- ¡Corrección importante aquí! -->
+                    +56 9 6171 1943
+                  </a>
+                  </p>
                 </div>
-              </div><!-- End Info Item -->
+              </div>
 
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Correo</h3>
-                  <p>profesorpuma@cmd.cl</p>
+                  <p>capoeiraestacioncentral@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
-
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6272.056896824262!2d-71.87687693086129!3d-33.963168959224575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9663d6c926403b8f%3A0x637b4fef9f9ed50f!2sMatanzas%2C%20Navidad%2C%20O&#39;Higgins!5e1!3m2!1ses!2scl!4v1728534375967!5m2!1ses!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4129.821587858381!2d-70.71723142343497!3d-33.472100198622826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c49dd993b1e9%3A0x69fb7f91ba9ac9ae!2sLas%20Estepas%20845%2C%209180444%20Santiago%2C%20Estaci%C3%B3n%20Central%2C%20Regi%C3%B3n%20Metropolitana!5e1!3m2!1ses!2scl!4v1750951597166!5m2!1ses!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
 
