--- a/splinter.html
+++ b/splinter.html
@@ -341,12 +341,19 @@
               </div><!-- End Info Item -->
 
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
-                <i class="bi bi-telephone flex-shrink-0"></i>
+                  <i class="bi bi-whatsapp flex-shrink-0"></i>
                 <div>
                   <h3>WhatsApp</h3>
-                  <p>+56 920368491</p>
+                  <p>
+                  <a href="https://wa.me/56961711943" 
+                    class="whatsapp-link" 
+                    target="_blank" 
+                    rel="noopener noreferrer">  <!-- ¡Corrección importante aquí! -->
+                    +56 920368491
+                  </a>
+                  </p>
                 </div>
-              </div><!-- End Info Item -->
+              </div>
 
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
                 <i class="bi bi-envelope flex-shrink-0"></i>
