cambios en telefonos whatsapp

--- a/mestre-xodo.html
+++ b/mestre-xodo.html
@@ -48,7 +48,7 @@
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
       <!-- Uncomment the line below if you also wish to use an image logo -->
       <!-- <img src="assets/img/logo.png" alt=""> -->
-      <h1 class="sitename">CMD PARANA BASIL</h1>
+      <h1 class="sitename">CMD MARINGÁ BRASIL</h1>
     </a>
 
     <div class="social-links text-center">
@@ -293,7 +293,7 @@ de meu Mestre Fuga.</p>
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Dirección</h3>
-                  <p>Costanera Norte #345, Cerrillos, RM, Chile</p>
+                  <p>Guiapó 01 Sarandi, PR, Brasil</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -302,11 +302,11 @@ de meu Mestre Fuga.</p>
                 <div>
                   <h3>WhatsApp</h3>
                   <p>
-                  <a href="https://wa.me/56961711943" 
+                  <a href="https://wa.me/5544844520412" 
                     class="whatsapp-link" 
                     target="_blank" 
                     rel="noopener noreferrer">  <!-- ¡Corrección importante aquí! -->
-                    +56 920368491
+                    +55 44845204112
                   </a>
                   </p>
                 </div>
@@ -316,7 +316,7 @@ de meu Mestre Fuga.</p>
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Correo</h3>
-                  <p>capoeiracmdcerrillos@gmail.com</p>
+                  <p>contacto@cmd.com</p>
                 </div>
               </div><!-- End Info Item -->
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4129.402433665152!2d-70.71962012343448!3d-33.480894299073356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c35f7f79d39f%3A0xc6c525b78f5a7c57!2sCostanera%20Nte.%20345%2C%209240354%20Cerrillos%2C%20Regi%C3%B3n%20Metropolitana!5e1!3m2!1ses!2scl!4v1746471661384!5m2!1ses!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
