--- a/quati.html
+++ b/quati.html
@@ -389,7 +389,7 @@ En noviembre de 2024 organizó su primera ceremonia de batizado y troca de corda
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Dirección</h3>
-                  <p>Rio Rhin #150, Maipú, RM, Chile</p>
+                  <p>Quillagua #480, La Reina, RM, Chile</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -398,11 +398,11 @@ En noviembre de 2024 organizó su primera ceremonia de batizado y troca de corda
                 <div>
                   <h3>WhatsApp</h3>
                   <p>
-                  <a href="https://wa.me/56961711943" 
+                  <a href="https://wa.me/56956521106" 
                     class="whatsapp-link" 
                     target="_blank" 
                     rel="noopener noreferrer">  <!-- ¡Corrección importante aquí! -->
-                    +56 959235055
+                    +56 956521106
                   </a>
                   </p>
                 </div>
@@ -412,7 +412,7 @@ En noviembre de 2024 organizó su primera ceremonia de batizado y troca de corda
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Correo</h3>
-                  <p>profesorpuma@cmd.cl</p>
+                  <p>monitormauricio.sdb.pa@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6272.056896824262!2d-71.87687693086129!3d-33.963168959224575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9663d6c926403b8f%3A0x637b4fef9f9ed50f!2sMatanzas%2C%20Navidad%2C%20O&#39;Higgins!5e1!3m2!1ses!2scl!4v1728534375967!5m2!1ses!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
