--- a/robin.html
+++ b/robin.html
@@ -48,7 +48,7 @@
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
       <!-- Uncomment the line below if you also wish to use an image logo -->
       <!-- <img src="assets/img/logo.png" alt=""> -->
-      <h1 class="sitename">CMD</h1>
+      <h1 class="sitename">CMD LO PRADO</h1>
     </a>
 
     <div class="social-links text-center">
@@ -364,7 +364,7 @@
                 <div>
                   <h3>WhatsApp</h3>
                   <p>
-                  <a href="https://wa.me/56961711943" 
+                  <a href="https://wa.me/56933066058" 
                     class="whatsapp-link" 
                     target="_blank" 
                     rel="noopener noreferrer">  <!-- ¡Corrección importante aquí! -->
