--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Correo</h3>
-                  <p>c.c.d.capoeirademeudeus@gmail.com</p>
+                  <p>contacto@cmd.com</p>
                 </div>
               </div><!-- End Info Item -->
 
