--- a/puma.html
+++ b/puma.html
@@ -439,18 +439,25 @@
               </div><!-- End Info Item -->
 
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
-                <i class="bi bi-telephone flex-shrink-0"></i>
+                  <i class="bi bi-whatsapp flex-shrink-0"></i>
                 <div>
                   <h3>WhatsApp</h3>
-                  <p>+56 959235055</p>
+                  <p>
+                  <a href="https://wa.me/56959235055" 
+                    class="whatsapp-link" 
+                    target="_blank" 
+                    rel="noopener noreferrer">  <!-- ¡Corrección importante aquí! -->
+                    +56 959235055
+                  </a>
+                  </p>
                 </div>
-              </div><!-- End Info Item -->
+              </div>
 
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Correo</h3>
-                  <p>profesorpuma@cmd.cl</p>
+                  <p>profesorpuma@cmd.com</p>
                 </div>
               </div><!-- End Info Item -->
               <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d1032.2532039555747!2d-70.77478373033732!3d-33.489066879866364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzPCsDI5JzIwLjYiUyA3MMKwNDYnMjYuOSJX!5e1!3m2!1ses!2scl!4v1747820555222!5m2!1ses!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
